kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-httpserver
  labels:
    app: motd
    env: prod
spec:
  containers:
    - name: motd
      image: jeanmassip/tp903:latest
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
